infra/k8s/istio/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: register-ingress
  namespace: register
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: register-ingress-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: register-ingress
  namespace: register
spec:
  parentRefs:
    - name: register-ingress
  rules:
    - backendRefs:
        - name: frontend
          port: 8080
